fix: set token expire to 7 days
